alex's background image stretch fix (I'm an idiot)

--- a/oec/assets/scss/elements/_profile.scss
+++ b/oec/assets/scss/elements/_profile.scss
@@ -579,6 +579,7 @@ body.profile {
       @include flex-direction(row);
       @include align-items(center);
       @include gradient(rgba(0,0,0,0), $darkbackground);
+      @include background-stretch();
       height: 150px;
       margin-top: 6px;
       overflow: hidden;
@@ -589,13 +590,13 @@ body.profile {
         width: 100%;
       }
 
-      .header {
-        @include filter(saturate(90%) brightness(0.8) contrast(1.1));
-        display: block;
-        height: 300%;
+      .button_cover {
+        background-color: rgba(0, 0, 0, 0.5);
+        height: 100%;
         left: 0;
         position: absolute;
-        top: -75%;
+        top: 0;
+        width: 100%;
       }
 
       i {
