--- a/oec/assets/scss/elements/_search.scss
+++ b/oec/assets/scss/elements/_search.scss
@@ -175,6 +175,7 @@
       @include flex-direction(row);
       @include justify(flex-start);
       @include align-items(center);
+      @include background-stretch();
       margin: 25px;
       height: 90px;
       min-width: 250px;
@@ -184,18 +185,16 @@
       text-align: left;
       z-index: 0;
 
-      $iconsize: 40px;
-
-      .background {
-        // @include blur(1);
-        @include filter(brightness(0.8));
-        display: block;
-        height: 200%;
+      .button_cover {
+        background-color: rgba(0, 0, 0, 0.5);
+        height: 100%;
         left: 0;
         position: absolute;
-        top: -50%;
-        z-index: 1;
+        top: 0;
+        width: 100%;
       }
+
+      $iconsize: 40px;
 
       .icon {
         margin: 0 15px;
